--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -35,7 +35,7 @@
 
 [[main]]
   name = "CV"
-  url = "#Simona-CV.pdf"
+  url = "#contact/home/Simona-CV.pdf"
   weight = 7
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
