--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -33,13 +33,9 @@
   url = "#contact"
   weight = 6
 
-[[main]]
-  name = "CV"
-  url = "#static/Simona-CV.pdf"
-  weight = 7
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 7
+[[main]]
+    name = "CV"
+    url = "files/cv.pdf"
+    weight = 7
